add/remove for football team functionality

--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -242,7 +242,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>G</p>
+                                    <p class="nl-position">FLEX</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -308,7 +308,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>DL</p>
+                                    <p class="nl-position">K</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -374,7 +374,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>DR</p>
+                                    <p class="nl-position">LRB</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -440,7 +440,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>DAL</p>
+                                    <p class="nl-position">RRB</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -506,7 +506,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>DAR</p>
+                                    <p class="nl-position">QB</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -572,7 +572,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>CM</p>
+                                    <p class="nl-position">LWR</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -638,7 +638,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>RWM</p>
+                                    <p class="nl-position">RWR</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -704,7 +704,7 @@
                                 <div class="row">
                                   <div class="col-6">
                                     <p>Sebastian Giovinco</p>
-                                    <p>LWM</p>
+                                    <p class="nl-position">TE</p>
                                     <p>
                                       <button class="btn btn-primary btn-sm disabled">Draft</button>
                                     </p>
@@ -715,204 +715,6 @@
                                   </div>
                                 </div></a></div>
                             <div id="collapseEight" role="tabpanel" aria-labelledby="headingEight" class="collapse">
-                              <div class="card-block">
-                                <div class="row align-items-center">
-                                  <div class="col-6">
-                                    <p class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>LEAGUE:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>
-                                      <p><img src="assets/img/flag/USA.png" alt="USA"></p>
-                                    </p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>NEWS:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><i class="fa fa-newspaper-o" aria-hidden="true"></i></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>TEAM:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>REAL MADRID</p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>STATUS:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>ACT</p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>OPP:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>Gameday</p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>Gameday:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>09/17/17</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="card">
-                            <div role="tab" id="headingNine" class="card-header"><a data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="true" aria-controls="collapseNine" class="collapsed">
-                                <div class="row">
-                                  <div class="col-6">
-                                    <p>Sebastian Giovinco</p>
-                                    <p>RS</p>
-                                    <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
-                                    </p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>28.33</p>
-                                    <p>$12,500</p>
-                                  </div>
-                                </div></a></div>
-                            <div id="collapseNine" role="tabpanel" aria-labelledby="headingNine" class="collapse">
-                              <div class="card-block">
-                                <div class="row align-items-center">
-                                  <div class="col-6">
-                                    <p class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>LEAGUE:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>
-                                      <p><img src="assets/img/flag/USA.png" alt="USA"></p>
-                                    </p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>NEWS:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><i class="fa fa-newspaper-o" aria-hidden="true"></i></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>TEAM:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>REAL MADRID</p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>STATUS:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>ACT</p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>OPP:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>Gameday</p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>Gameday:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>09/17/17</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="card">
-                            <div role="tab" id="headingTen" class="card-header"><a data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="true" aria-controls="collapseTen" class="collapsed">
-                                <div class="row">
-                                  <div class="col-6">
-                                    <p>Sebastian Giovinco</p>
-                                    <p>LS</p>
-                                    <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
-                                    </p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>28.33</p>
-                                    <p>$12,500</p>
-                                  </div>
-                                </div></a></div>
-                            <div id="collapseTen" role="tabpanel" aria-labelledby="headingTen" class="collapse">
-                              <div class="card-block">
-                                <div class="row align-items-center">
-                                  <div class="col-6">
-                                    <p class="avatar"><img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco"></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p class="nl-pl-social"><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>LEAGUE:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>
-                                      <p><img src="assets/img/flag/USA.png" alt="USA"></p>
-                                    </p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>NEWS:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><i class="fa fa-newspaper-o" aria-hidden="true"></i></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>TEAM:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>REAL MADRID</p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>STATUS:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>ACT</p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>OPP:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>Gameday</p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p><span>Gameday:</span></p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>09/17/17</p>
-                                  </div>
-                                </div>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="card">
-                            <div role="tab" id="headingEleven" class="card-header"><a data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven" class="collapsed">
-                                <div class="row">
-                                  <div class="col-6">
-                                    <p>Sebastian Giovinco</p>
-                                    <p>ST</p>
-                                    <p>
-                                      <button class="btn btn-primary btn-sm disabled">Draft</button>
-                                    </p>
-                                  </div>
-                                  <div class="col-6">
-                                    <p>28.33</p>
-                                    <p>$12,500</p>
-                                  </div>
-                                </div></a></div>
-                            <div id="collapseEleven" role="tabpanel" aria-labelledby="headingEleven" class="collapse">
                               <div class="card-block">
                                 <div class="row align-items-center">
                                   <div class="col-6">
@@ -1129,8 +931,8 @@
                 </div>
               </div>
               <div class="nl-team-button">
-                <button type="button" class="btn btn-team btn-big-radius active">field view</button>
-                <button type="button" class="btn btn-team btn-big-radius">list view</button>
+                <button type="button" class="btn btn-team btn-big-radius active field-view-btn">field view</button>
+                <button type="button" class="btn btn-team btn-big-radius list-view-btn">list view</button>
               </div>
               <div class="nl-team-field football">
                 <div class="striker-line"></div>
