--- a/markup/_dist/login.html
+++ b/markup/_dist/login.html
@@ -77,6 +77,7 @@
       </div>
     </header>
     <main>
+      <div class="nl-white-bg"></div>
       <section class="nl-section login-wrapper">
         <div id="loginSection" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true">
           <div role="document" class="modal-dialog">
