--- a/markup/_dist/index.html
+++ b/markup/_dist/index.html
@@ -18,16 +18,13 @@
         <div class="container-fluid">
           <div class="row align-items-start">
             <div class="col-4 col-lg-2">
-              <div class="nl-logotype"><a href="#"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
+              <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
             </div>
             <div class="col-1 col-lg-7">
               <div class="nl-title">The worlds first crypto fantasy sports</div>
             </div>
             <div class="col-12 col-lg-3">
-              <div class="nl-btutton-login">
-                <button type="button" data-toggle="modal" data-target="#loginModal" class="btn btn-primary nl-m-r-15">Login</button>
-                <button type="button" data-toggle="modal" data-target="#registrationModal" class="btn">SIGN UP</button>
-              </div>
+              <div class="nl-btutton-login"><a href="login.html" class="btn btn-primary nl-m-r-15">Login</a><a href="register.html" class="btn">SIGN UP</a></div>
             </div>
           </div>
         </div>
@@ -261,82 +258,8 @@
         </div>
       </section>
     </main>
-    <div id="loginModal" tabindex="-1" role="dialog" aria-labelledby="loginModalLabel" aria-hidden="true" class="modal fade">
-      <div role="document" class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h2 id="loginModalLabel" class="modal-title">Login</h2>
-            <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true"></span></button>
-          </div>
-          <div class="modal-body">
-            <form class="form-signin">
-              <div class="input-group">
-                <input id="inputEmail" type="email" placeholder="SCREEN NAME OR EMAIL" required="" autofocus="" class="form-control">
-              </div>
-              <div class="input-group">
-                <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control"><span class="show-password input-group-addon">show</span>
-              </div><a href="#">FORGOT MY PASSWORD</a>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-primary btn-block">Login</button>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="registrationModal" tabindex="-1" role="dialog" aria-labelledby="registrationModalLabel" aria-hidden="true" class="modal fade">
-      <div role="document" class="modal-dialog">
-        <div class="modal-content">
-          <div class="modal-header">
-            <h2 id="registrationModalLabel" class="modal-title">Registration</h2>
-            <button type="button" data-dismiss="modal" aria-label="Close" class="close"><span aria-hidden="true"></span></button>
-          </div>
-          <div class="modal-body">
-            <form class="form-signin">
-              <div class="input-group">
-                <input id="inputEmail" type="email" placeholder="EMAIL" required="" autofocus="" class="form-control">
-              </div>
-              <div class="input-group">
-                <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control"><span class="show-password input-group-addon">show</span>
-              </div>
-              <div class="input-group">
-                <input type="password" placeholder="RE-TYPE PASSWORD" class="form-control">
-              </div>
-              <div class="input-group">
-                <input id="screenName" placeholder="SCREEN NAME" required="" autofocus="" class="form-control">
-              </div>
-              <div class="input-group">
-                <input id="firstName" placeholder="FIRST NAME" required="" autofocus="" class="form-control">
-              </div>
-              <div class="input-group">
-                <input id="lastName" placeholder="LAST NAME" required="" autofocus="" class="form-control">
-              </div>
-              <div class="input-group">
-                <select id="country" placeholder="COUNTRY" required="" class="form-control custom-select">
-                  <option selected="" disabled="" hidden="">COUNTRY</option>
-                  <option>USA</option>
-                  <option>CANADA</option>
-                  <option>UK</option>
-                  <option>PORTUGAL</option>
-                </select>
-              </div>
-              <div class="input-group">
-                <input id="promoCode" placeholder="PROMO CODE(OPTIONAL)" required="" autofocus="" class="form-control">
-              </div>
-              <div data-sitekey="your_site_key" class="g-recaptcha"></div>
-              <label class="check-wrapper">
-                <input type="checkbox" value="">
-                <p>I agree to the No Limit Fantasy Sports, LLC Contest <a href="#">Rules</a> , <a href="#">Terms and Conditions</a>  and <a href="#">Privacy Policy</a>  and represent that I am of legal age to play Fantasy Sports in my state of residence. Residents of the states of Alabama, Arizona, Colorado, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Louisiana, Massachusetts, Michigan, Mississippi, Missouri, Montana, Nevada, New York, North Dakota, Pennsylvania, Tennessee, Texas, Vermont, Virginia and Washington, as well as Puerto Rico and where otherwise prohibited by law are not eligible to enter Fantasy Sports Pay to play contests.
-                </p>
-              </label>
-            </form>
-          </div>
-          <div class="modal-footer">
-            <button type="submit" class="btn btn-primary btn-block">REGISTER</button>
-          </div>
-        </div>
-      </div>
-    </div>
+    <!--include _partials/login-modal.jade-->
+    <!--include _partials/registration-modal.jade-->
     <!--Footer Block-->
     <footer class="nl-footer">
       <div class="nl-footer--top">
