--- a/markup/_dist/register.html
+++ b/markup/_dist/register.html
@@ -35,25 +35,55 @@
     </header>
     <main>
       <div class="nl-white-bg"></div>
-      <section class="nl-section login-wrapper">
-        <div id="loginSection" tabindex="-1" role="dialog" aria-labelledby="loginSectionLabel" aria-hidden="true">
+      <section class="nl-section register-wrapper">
+        <div id="registrationSection" tabindex="-1" role="dialog" aria-labelledby="registrationSectionLabel" aria-hidden="true">
           <div role="document" class="block-dialog">
             <div class="block-content">
               <div class="block-header">
-                <h2 id="loginSectionLabel" class="modal-title">Login</h2><a href="index.html" class="close"><span aria-hidden="true"></span></a>
+                <h2 id="registrationSectionLabel" class="block-title">Registration</h2><a href="index.html" class="close"><span aria-hidden="true"></span></a>
               </div>
               <div class="block-body">
                 <form class="form-signin">
                   <div class="input-group">
-                    <input id="inputEmail" type="email" placeholder="SCREEN NAME OR EMAIL" required="" autofocus="" class="form-control">
+                    <input id="inputEmail" type="email" placeholder="EMAIL" required="" autofocus="" class="form-control">
                   </div>
                   <div class="input-group">
                     <input type="password" placeholder="PASSWORD" aria-describedby="show" class="form-control"><span class="show-password input-group-addon">show</span>
-                  </div><a href="#">FORGOT MY PASSWORD</a>
+                  </div>
+                  <div class="input-group">
+                    <input type="password" placeholder="RE-TYPE PASSWORD" class="form-control">
+                  </div>
+                  <div class="input-group">
+                    <input id="screenName" placeholder="SCREEN NAME" required="" autofocus="" class="form-control">
+                  </div>
+                  <div class="input-group">
+                    <input id="firstName" placeholder="FIRST NAME" required="" autofocus="" class="form-control">
+                  </div>
+                  <div class="input-group">
+                    <input id="lastName" placeholder="LAST NAME" required="" autofocus="" class="form-control">
+                  </div>
+                  <div class="input-group">
+                    <select id="country" placeholder="COUNTRY" required="" class="form-control custom-select">
+                      <option selected="" disabled="" hidden="">COUNTRY</option>
+                      <option>USA</option>
+                      <option>CANADA</option>
+                      <option>UK</option>
+                      <option>PORTUGAL</option>
+                    </select>
+                  </div>
+                  <div class="input-group">
+                    <input id="promoCode" placeholder="PROMO CODE(OPTIONAL)" required="" autofocus="" class="form-control">
+                  </div>
+                  <div data-sitekey="your_site_key" class="g-recaptcha"></div>
+                  <label class="check-wrapper">
+                    <input type="checkbox" value="">
+                    <p>I agree to the No Limit Fantasy Sports, LLC Contest <a href="#">Rules</a> , <a href="#">Terms and Conditions</a>  and <a href="#">Privacy Policy</a>  and represent that I am of legal age to play Fantasy Sports in my state of residence. Residents of the states of Alabama, Arizona, Colorado, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Louisiana, Massachusetts, Michigan, Mississippi, Missouri, Montana, Nevada, New York, North Dakota, Pennsylvania, Tennessee, Texas, Vermont, Virginia and Washington, as well as Puerto Rico and where otherwise prohibited by law are not eligible to enter Fantasy Sports Pay to play contests.
+                    </p>
+                  </label>
                 </form>
               </div>
               <div class="block-footer">
-                <button type="submit" class="btn btn-primary btn-block">Login</button>
+                <button type="submit" class="btn btn-primary btn-block">REGISTER</button>
               </div>
             </div>
           </div>
