--- a/markup/_dist/login.html
+++ b/markup/_dist/login.html
@@ -12,27 +12,7 @@
   </head>
   <body>
     <!--include _partials/preloader.jade-->
-    <!--Navigation Fixed Block-->
-    <header class="nl-header">
-      <div class="nl-header--top">
-        <div class="container-fluid">
-          <div class="row align-items-start">
-            <div class="col-4 col-lg-2">
-              <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
-            </div>
-            <div class="col-1 col-lg-7">
-              <div class="nl-title">The worlds first crypto fantasy sports</div>
-            </div>
-            <div class="col-12 col-lg-3">
-              <div class="nl-btutton-login">
-                <button type="button" data-toggle="modal" data-target="#loginModal" class="btn btn-primary nl-m-r-15">Login</button>
-                <button type="button" data-toggle="modal" data-target="#registrationModal" class="btn">SIGN UP</button>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </header>
+    <!--include _partials/header-form.jade-->
     <main>
       <div class="nl-white-bg"></div>
       <section class="nl-section login-wrapper">
