--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -56,7 +56,7 @@
                 </div>
                 <div id="navbarSupportedContent" class="collapse navbar-collapse">
                   <ul class="navbar-nav mr-auto">
-                    <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle">Sport <img src="assets/img/ball.png" alt="#"></a>
+                    <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><span>Sport</span> <img src="assets/img/ball.png" alt="#"></a>
                       <div aria-labelledby="dropdownMenuLink" class="dropdown-menu"><a href="#" class="dropdown-item"><span>Soccer</span> <img src="assets/img/ball.png" alt="#"></a><a href="#" class="dropdown-item"><span>Football</span> <img src="assets/img/ball.png" alt="#"></a><a href="#" class="dropdown-item"><span>Baseball</span> <img src="assets/img/ball.png" alt="#"></a><a href="#" class="dropdown-item"><span>Tennis</span> <img src="assets/img/ball.png" alt="#"></a></div>
                     </li>
                     <li class="nav-item"><a href="#" class="nav-link">HOME</a></li>
@@ -69,6 +69,16 @@
                       <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/France.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Spain.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Germany.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/USA.png"></a></div>
                     </li>
                   </ul>
+                  <div class="nl-profile-mobile">
+                    <div class="nl-profile--data">
+                      <p><i class="fa fa-user-circle" aria-hidden="true"></i> Name</p>
+                      <p>balance: 1 NLC2=00345 btc</p>
+                      <div class="nl-btn-control">
+                        <div class="btn btn-primary btn-big-radius">Buy NLC2</div>
+                        <div class="btn btn-big-radius">logout</div>
+                      </div>
+                    </div>
+                  </div>
                 </div>
               </nav>
             </div>
@@ -89,7 +99,7 @@
               <div class="nl-players-filter-title">Filter by lEAgue:</div>
               <div class="nl-players-filter">
                 <div class="row align-items-center">
-                  <div class="col-md-5">
+                  <div class="col-md-12">
                     <div class="owl-carousel pl-flag">
                       <div>
                         <button type="button" class="btn btn-link"><img src="assets/img/flag/USA.png" alt="USA"></button>
@@ -105,9 +115,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="col-md-7">
-                    <button type="clear" class="btn btn-primary">Reset Filter</button>
-                  </div>
+                  <!--div.col-md-7-->
+                  <!--    button.btn.btn-primary(type="clear") Reset Filter-->
                 </div>
               </div>
               <div class="nl-players-filter-title">FILTER by team:</div>
