--- a/markup/_dist/contact.html
+++ b/markup/_dist/contact.html
@@ -11,8 +11,127 @@
     <link rel="stylesheet" href="assets/css/style.css">
   </head>
   <body>
-    <h1> Gulp - BrowserSync, Jade, Sass starter templates.</h1>
-    <p>Congrates you have done it.<b>Happy coding.</b></p>
+    <header class="nl-header-log">
+      <div class="nl-header-top">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-12 p-0">
+              <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
+                <button type="button" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right mob-nav-toggle"><span class="navbar-toggler-icon"></span></button>
+                <div class="row m-0">
+                  <div class="col-lg-7 nl-header-top--left">
+                    <div class="row nl-h100">
+                      <div class="col-lg-2">
+                        <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
+                      </div>
+                      <div class="col-lg-10 align-self-center">
+                        <div class="nl-title">The worlds first crypto fantasy sports</div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="col-lg-5 nl-header-top--right">
+                    <div class="nl-profile">
+                      <div class="nl-profile--avatar"><i class="fa fa-user-circle" aria-hidden="true"></i></div>
+                      <div class="nl-profile--data">
+                        <div class="name">Name</div>
+                        <div class="settings"><a href="#"><i class="fa fa-cog" aria-hidden="true"></i></a><a href="#"><i class="fa fa-envelope" aria-hidden="true"></i></a><a href="#"><i class="fa fa-bell" aria-hidden="true"></i></a></div>
+                      </div>
+                    </div>
+                    <div class="nl-balance">
+                      <div class="nl-balance--logo"><a href="index.html"><img src="assets/img/nl-logo-header-log.png" alt="NL"></a></div>
+                      <div class="nl-balance--data">
+                        <div class="title">balance</div>
+                        <div class="sub-title">20023 NLC2</div>
+                        <div class="data">1 NLC2=00345 btc</div>
+                      </div>
+                    </div>
+                    <div class="nl-btn-control">
+                      <div class="nl-btn-group">
+                        <div class="btn btn-primary btn-big-radius btn-block">Buy NLC2</div>
+                        <div class="btn btn-big-radius btn-block">logout</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div id="navbarSupportedContent" class="collapse navbar-collapse">
+                  <ul class="navbar-nav mr-auto">
+                    <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><span>Sport</span> <img src="assets/img/ball.png" alt="#"></a>
+                      <div aria-labelledby="dropdownMenuLink" class="dropdown-menu"><a href="#" class="dropdown-item"><span>Soccer</span> <img src="assets/img/ball.png" alt="#"></a><a href="#" class="dropdown-item"><span>Football</span> <img src="assets/img/ball.png" alt="#"></a><a href="#" class="dropdown-item"><span>Baseball</span> <img src="assets/img/ball.png" alt="#"></a><a href="#" class="dropdown-item"><span>Tennis</span> <img src="assets/img/ball.png" alt="#"></a></div>
+                    </li>
+                    <li class="nav-item"><a href="#" class="nav-link">HOME</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">MY TEAMS+</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">CONTESTS+</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">PLAYERS</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">LIVE SCORES</a></li>
+                    <li class="nav-item"><a href="#" class="nav-link">MY DASHBOARD</a></li>
+                    <li class="nav-item dropdown"><a href="#" id="dropdownMenuLink2" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" class="nav-link dropdown-toggle"><img alt="" src="assets/img/flag/USA.png"></a>
+                      <div aria-labelledby="dropdownMenuLink2" class="dropdown-menu"><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/France.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Spain.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/Germany.png"></a><a href="#" class="dropdown-item"><img alt="" src="assets/img/flag/USA.png"></a></div>
+                    </li>
+                  </ul>
+                  <div class="nl-profile-mobile">
+                    <div class="nl-profile--data">
+                      <p><i class="fa fa-user-circle" aria-hidden="true"></i> Name</p>
+                      <p>balance: 1 NLC2=00345 btc</p>
+                      <div class="nl-btn-control">
+                        <div class="btn btn-primary btn-big-radius">Buy NLC2</div>
+                        <div class="btn btn-big-radius">logout</div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </nav>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <main>
+      <section class="nl-section contact-wrapper">
+        <div id="contactSection" tabindex="-1" role="dialog" aria-labelledby="contactSectionLabel" aria-hidden="true">
+          <div role="document" class="block-dialog">
+            <div class="block-content">
+              <div class="block-header">
+                <h2 id="contactLabel" class="modal-title">Contact</h2>
+              </div>
+              <div class="block-body">
+                <form class="form-signin">
+                  <div class="nl-contact-group-wrapper"><img src="assets/img/address-icon.png" alt="address icon" class="address-icon">
+                    <p>No Limit Fantasy Sports, LLC<br>  1407 Foothill Blvd #305<br> La Verne, CA 91750</p>
+                  </div>
+                  <div class="nl-contact-group-wrapper"><img src="assets/img/mail-icon.png" alt="mail icon" class="mail-icon">
+                    <p><a href="mailto:nlfantasymonitor@gmail.com">nlfantasymonitor@gmail.com</a></p>
+                  </div>
+                  <p>For information regarding Advertising or<br>Affiliates, please email<a href="mailto:oaperalta27@gmail.com">oaperalta27@gmail.com</a></p>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+    <!--Footer Block-->
+    <footer class="nl-footer">
+      <div class="nl-footer--top">
+        <div class="row align-items-center">
+          <div class="col-lg-1"><a href="index.html"><img src="assets/img/nl-footer-logo.jpg" alt="NO Limit"></a></div>
+          <div class="col-lg-8">
+            <p>Residents of the states of Alabama, Arizona, Colorado, Delaware, Florida, Georgia, Hawaii, Idaho, Illinois, Indiana, Iowa, Louisiana, Massachusetts, Michigan, Mississippi, Missouri, Montana, Nevada, New York, North Dakota, Pennsylvania, Tennessee, Texas, Vermont, Virginia and Washington, as well as Puerto Rico and countries where otherwise prohibited by law are not eligible to enter Fantasy Sports Pay to play contests. Free - roll contests are open to all the public over 18 as it does not fall into the pay-to-play category as advertisers provide the prizes.</p>
+          </div>
+          <div class="col-lg-3 nl-tar">
+            <div class="input-group-btn"><a htef="#" class="btn btn-footer">Forum</a><a htef="#" class="btn btn-footer">Contact Us</a></div>
+            <div class="input-group-btn"><a htef="#" class="btn btn-footer">Faq</a><a htef="#" class="btn btn-footer">Terms & Conditions</a></div>
+          </div>
+        </div>
+      </div>
+      <div class="nl-footer--button">
+        <div class="row align-items-center">
+          <div class="col-lg-9">
+            <p>Copyright © 2017 No Limit Fantasy Sports, LLC All Rights Reserved Contest Rules, Terms and Conditions and Privacy Policy</p>
+          </div>
+          <div class="col-lg-3 nl-social-icon nl-tar"><a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a><a href="#"><i class="fa fa-youtube-play" aria-hidden="true"></i></a><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></div>
+        </div>
+      </div>
+    </footer>
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadCallback&amp;render=explicit" async="" defer=""></script>
     <script type="text/javascript" src="assets/js/jquery-3.2.1.min.js"></script>
     <script type="text/javascript" src="assets/js/owl.carousel.min.js"></script>
