--- a/markup/_dist/contests.html
+++ b/markup/_dist/contests.html
@@ -18,12 +18,12 @@
           <div class="row">
             <div class="col-12 p-0">
               <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-                <button type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right"><span class="navbar-toggler-icon"></span></button>
+                <button type="button" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation" class="navbar-toggler navbar-toggler-right mob-nav-toggle"><span class="navbar-toggler-icon"></span></button>
                 <div class="row m-0">
                   <div class="col-lg-7 nl-header-top--left">
                     <div class="row nl-h100">
                       <div class="col-lg-2">
-                        <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.svg" alt="NO Limit"></a></div>
+                        <div class="nl-logotype"><a href="index.html"><img src="assets/img/logotype.png" alt="NO Limit"></a></div>
                       </div>
                       <div class="col-lg-10 align-self-center">
                         <div class="nl-title">The worlds first crypto fantasy sports</div>
