--- a/markup/_dist/create_team_football.html
+++ b/markup/_dist/create_team_football.html
@@ -231,7 +231,7 @@
                 </ul>
                 <div class="tab-content">
                   <div id="all" role="tabpanel" class="tab-pane active">
-                    <div class="nl-mob-table">
+                    <div class="nl-mob-table mob-table-striped">
                       <div class="nl-title">
                         <div class="row">
                           <div class="col-6">
